# sickle

./: .gitignore  Cargo.toml  README.md  flake.nix  flatpak_manifest.json
data/: sickle.desktop  sickle_flatpak.desktop
src/: main.rs  timeline.rs
