[package]
name = "sickle"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"


[dependencies]
gstreamer = "0.23.7"
gstreamer-app = "0.23.5" # appsink
gstreamer-base = "0.23.5" # basesrc
iced_video_player = {git = "https://github.com/jazzfool/iced_video_player.git", branch="master"}
iced = { version = "0.13.1", features = ["image", "advanced", "wgpu", "svg"] }
url = "2.5.4"
rfd = "0.15.3"
essi-ffmpeg = { git = "https://github.com/MrAdhit/essi-ffmpeg" }
time = { version = "0.3.37", features = [ "parsing" ]}
clap = { version = "4.5.40", features = ["derive"] }
toml = {git = "https://github.com/toml-rs/toml.git", branch="main"}
